--- a/Team attack 4.tex
+++ b/Team attack 4.tex
@@ -33,28 +33,28 @@
       draw (0u,2u)--(2u,2u)--(2u,4u) dashed evenly; 
       draw (3u,1u)--(3u,4u) dashed evenly; 
       label("$1$",(1.5u,0.5u)); 
-      draw circle((1.5u,0.5u),.25u); 
+      draw circle((1.5u,0.5u),.3u); 
       label("$2$",(2.5u,1.5u)); 
-      draw circle((2.5u,1.5u),.25u); 
+      draw circle((2.5u,1.5u),.3u); 
       label("$3$",(3.5u,1.5u)); 
-      draw circle((3.5u,1.5u),.25u); 
+      draw circle((3.5u,1.5u),.3u); 
       label("$4$",(4.5u,2.5u)); 
-      draw circle((4.5u,2.5u),.25u); 
+      draw circle((4.5u,2.5u),.3u); 
       label("$5$",(3.5u,3.5u)); 
-      draw circle((3.5u,3.5u),.25u); 
+      draw circle((3.5u,3.5u),.3u); 
       label("$6$",(2.5u,3.5u)); 
-      draw circle((2.5u,3.5u),.25u); 
+      draw circle((2.5u,3.5u),.3u); 
       label("$7$",(1.5u,3.5u)); 
-      draw circle((1.5u,3.5u),.25u); 
+      draw circle((1.5u,3.5u),.3u); 
       label("$8$",(0.5u,2.5u)); 
-      draw circle((0.5u,2.5u),.25u); 
+      draw circle((0.5u,2.5u),.3u); 
       label("$9$",(0.5u,1.5u)); 
-      draw circle((0.5u,1.5u),.25u);
+      draw circle((0.5u,1.5u),.3u);
     \end{mplibcode}
   \end{minipage}
   \begin{enumerate}[leftmargin=3mm]
     \item[6.] The sum of the two 5-digit numbers $AMC10$ and $AMC12$ is $123422$. What is $A+M+C$?
-    \item[7.] A point $(x,\ y)$ is randomly picked from inside the rectangle with vertices $(0,0)$, $(4,0)$, $(4,1)$, and $(0,1)$. What is the probability that $x<y$?
+    \item[7.] A point $(x,\ y)$ is randomly picked from inside the rectangle with vertices $(0,\ 0)$, $(4,\ 0)$, $(4,\ 1)$, and $(0,\ 1)$. What is the probability that $x<y$?
   \end{enumerate}
 
   \newpage
@@ -79,28 +79,28 @@
       draw (0u,2u)--(2u,2u)--(2u,4u) dashed evenly; 
       draw (3u,1u)--(3u,4u) dashed evenly; 
       label("$1$",(1.5u,0.5u)); 
-      draw circle((1.5u,0.5u),.25u); 
+      draw circle((1.5u,0.5u),.3u); 
       label("$2$",(2.5u,1.5u)); 
-      draw circle((2.5u,1.5u),.25u); 
+      draw circle((2.5u,1.5u),.3u); 
       label("$3$",(3.5u,1.5u)); 
-      draw circle((3.5u,1.5u),.25u); 
+      draw circle((3.5u,1.5u),.3u); 
       label("$4$",(4.5u,2.5u)); 
-      draw circle((4.5u,2.5u),.25u); 
+      draw circle((4.5u,2.5u),.3u); 
       label("$5$",(3.5u,3.5u)); 
-      draw circle((3.5u,3.5u),.25u); 
+      draw circle((3.5u,3.5u),.3u); 
       label("$6$",(2.5u,3.5u)); 
-      draw circle((2.5u,3.5u),.25u); 
+      draw circle((2.5u,3.5u),.3u); 
       label("$7$",(1.5u,3.5u)); 
-      draw circle((1.5u,3.5u),.25u); 
+      draw circle((1.5u,3.5u),.3u); 
       label("$8$",(0.5u,2.5u)); 
-      draw circle((0.5u,2.5u),.25u); 
+      draw circle((0.5u,2.5u),.3u); 
       label("$9$",(0.5u,1.5u)); 
-      draw circle((0.5u,1.5u),.25u);
+      draw circle((0.5u,1.5u),.3u);
     \end{mplibcode}
   \end{minipage}
   \begin{enumerate}[leftmargin=3mm]
     \item[6.] The sum of the two 5-digit numbers $AMC10$ and $AMC12$ is $123422$. What is $A+M+C$?
-    \item[7.] A point $(x,\ y)$ is randomly picked from inside the rectangle with vertices $(0,0)$, $(4,0)$, $(4,1)$, and $(0,1)$. What is the probability that $x<y$?
+    \item[7.] A point $(x,\ y)$ is randomly picked from inside the rectangle with vertices $(0,\ 0)$, $(4,\ 0)$, $(4,\ 1)$, and $(0,\ 1)$. What is the probability that $x<y$?
   \end{enumerate}
 
 \end{document}
